infrastructure/kubernetes/istio/sagemaker-gateway.yaml
# infrastructure/kubernetes/istio-system/sagemaker-gateway.yaml

apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: sagemaker-endpoint
  namespace: istio-system
spec:
  hosts:
  - "sagemaker.${AWS_REGION}.amazonaws.com"
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sagemaker-routes
  namespace: istio-system
spec:
  hosts:
  - "sagemaker.${AWS_REGION}.amazonaws.com"
  gateways:
  - istio-egressgateway
  - mesh
  http:
  - match:
    - gateways:
      - mesh
      port: 443
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        port:
          number: 443
  - match:
    - gateways:
      - istio-egressgateway
      port: 443
    route:
    - destination:
        host: "sagemaker.${AWS_REGION}.amazonaws.com"
        port:
          number: 443
